--- a/src/main/resources/data.properties
+++ b/src/main/resources/data.properties
@@ -4,9 +4,10 @@ ds.maxPoolSize=10
 ds.initialPoolSize=2
 
 #dev
-ds.jdbcUrl=jdbc:mysql://192.168.0.253:3306/main?useUnicode=true&characterEncoding=UTF-8&useOldAliasMetadataBehavior=true&zeroDateTimeBehavior=convertToNull
-ds.user=ops
-ds.password=123
+#ds.jdbcUrl=jdbc:mysql://192.168.0.253:3306/main?useUnicode=true&characterEncoding=UTF-8&useOldAliasMetadataBehavior=true&zeroDateTimeBehavior=convertToNull
+ds.jdbcUrl=jdbc:mysql://127.0.0.1:3306/test?useUnicode=true&characterEncoding=UTF-8&useOldAliasMetadataBehavior=true&zeroDateTimeBehavior=convertToNull
+ds.user=root
+ds.password=1234
 
 #test
 #ds.jdbcUrl=jdbc:mysql://192.168.0.211:3306/main?useUnicode=true&characterEncoding=UTF-8&useOldAliasMetadataBehavior=true&zeroDateTimeBehavior=convertToNull
