--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,5 +1,5 @@
 #INFO
-log4j.rootCategory=DEBUG,app,stdout,cat
+log4j.rootCategory=info,app,stdout,cat
 
 #stdout
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
@@ -8,7 +8,7 @@ log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %p %C.%M(
 
 #app
 log4j.appender.app=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.app.File=/home/logs/tkDemo/sys.log
+log4j.appender.app.File=/Users/pingan/git/logs/sys.log
 log4j.appender.app.DatePattern='-'yyyy-MM-dd'.log'
 # Keep three backup files.
 log4j.appender.app.MaxBackupIndex=100
